tests/baselines/reference/parserGenericsInTypeContexts1.errors.txt
==== tests/cases/compiler/parserGenericsInTypeContexts1.ts (10 errors) ====
    class C extends A<T> implements B<T> {
                    ~
!!! parserGenericsInTypeContexts1.ts(1,17): error TS2095: Cannot find name 'A'.
                                    ~
!!! parserGenericsInTypeContexts1.ts(1,33): error TS2095: Cannot find name 'B'.
    }
    
    var v1: C<T>;
            ~~~~
!!! parserGenericsInTypeContexts1.ts(4,9): error TS2125: Type 'C' is not generic.
    var v2: D<T> = null;
            ~
!!! parserGenericsInTypeContexts1.ts(5,9): error TS2095: Cannot find name 'D'.
    var v3: E.F<T>;
            ~
!!! parserGenericsInTypeContexts1.ts(6,9): error TS2095: Cannot find name 'E'.
    var v3: G.H.I<T>;
        ~~~~~~~~~~~~
!!! parserGenericsInTypeContexts1.ts(7,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'v3' must be of type 'any', but here has type 'any'.
            ~
!!! parserGenericsInTypeContexts1.ts(7,9): error TS2095: Cannot find name 'G'.
    var v6: K<T>[];
            ~
!!! parserGenericsInTypeContexts1.ts(8,9): error TS2095: Cannot find name 'K'.
    
    
    function f1(a: E<T>) {
                   ~
!!! parserGenericsInTypeContexts1.ts(11,16): error TS2095: Cannot find name 'E'.
    }
    
    function f2(): F<T> {
                   ~
!!! parserGenericsInTypeContexts1.ts(14,16): error TS2095: Cannot find name 'F'.
    }
    
    